Update to version standard 1.0.0

--- a/src/resources/lang/de_de.yml
+++ b/src/resources/lang/de_de.yml
@@ -8,7 +8,8 @@ Plugin:
 
   plugin-enabled: "[P]&a Das Plugin wurde erfolgreich aktiviert."
   plugin-link: "[P]&a Verknüpfung mit&6 %Link%&a erfolgreich!"
-  plugin-update: "[P]&a Neue Version verfügbar:&6 %NewVersion%&a!\n[P]&a Aktuell verwendete Version:&6 %Version%&a!\n[P]&a Laden Sie die neuste Version von:\n[P]&6 %Path%"
+  plugin-update: "[P]&a Neue Version verfügbar:&6 %NewVersion%&a!\n[P]&a Aktuelle Version:&6 %Version%&a!\n[P]&a Lade die neuste Version:\n[P]&6 %Path%"
+  plugin-data: "[P]&c Es konnte keine Verbindung zum Datenspeicher hergestellt werden. Bitte überprüfe die Serverkonsole!"
   plugin-version: "[P]&c Das Plugin kann mit dieser Server-Version nicht genutzt werden! (&b%Version%&c)"
   plugin-reload: "[P]&a Das Plugin wurde erfolgreich neu geladen."
   plugin-disabled: "[P]&a Das Plugin wurde erfolgreich deaktiviert."
@@ -18,8 +19,9 @@ Plugin:
 
 Messages:
 
-  command-permission-error: "[P]&c Sie haben keine Berechtigung, diesen Befehl zu verwenden!"
-  command-sender-error: "[P]&c Dieser Sender kann diesen Befehl nicht ausführen!"
+  command-permission-error: "[P]&c Du hast keine Berechtigung, diesen Befehl zu verwenden!"
+  command-sender-error: "[P]&c Du kann diesen Befehl nicht ausführen!"
+
   command-gholo-use-error: "[P]&c Befehl: /holo help"
   command-gholo-create-use-error: "[P]&c Befehl: /holo create <Id>"
   command-gholo-create-exists-error: "[P]&c Holo&6 %Holo%&c existiert bereits!"
